--- a/bsm/css/style-v2.css
+++ b/bsm/css/style-v2.css
@@ -38,7 +38,13 @@ html, body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-    color: #ffffff;
+    color: black;
+}
+#home .panel{
+  opacity: 0.55;
+  border-radius: 2em;
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 #about {
@@ -50,7 +56,7 @@ html, body {
 }
 #explore .fa {
   border: 2px solid #FFFFFF;
-  border-radius: 50%;
+  border-radius: 20%;
   display: inline-block;
   font-size: 60px;
   height: 140px;
@@ -71,9 +77,10 @@ html, body {
   -o-background-size: cover;
   background-size: cover;
 }
-#information .panel {
+#information .panel, {
   opacity: 0.85;
 }
+
 
 
 footer {
