--- a/bsm/css/style-v2.css
+++ b/bsm/css/style-v2.css
@@ -25,6 +25,10 @@ html, body {
   padding: 0;
 }
 
+.text-highlight {
+  color: #805500;
+}
+
 
 /* additional sections */
 #home {
@@ -42,15 +46,19 @@ html, body {
     color: black;
 }
 #home .panel{
-  opacity: 0.70;
+  opacity: 0.75;
   background-color: lightgray;
-  border-radius: 2em;
-  margin-left: 2em;
-  margin-right: 2em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  border-radius: 1em;
+  margin-left: 3em;
+  margin-right: 3em;
   margin-top: 40%;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 #about {
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #explore, #contact{
@@ -82,6 +90,7 @@ html, body {
 }
 #information .panel {
   opacity: 0.85;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
