--- a/bsm/css/style-v2.css
+++ b/bsm/css/style-v2.css
@@ -12,6 +12,13 @@ html, body {
   color: #d8cec0;
 }
 
+h1,h2,h3 {
+  font-weight: bolder;
+  padding-bottom:.5em;
+}
+hr {
+  padding-bottom: 1em;
+}
 .text-header {
   color: white;
 }
@@ -29,6 +36,10 @@ html, body {
 }
  .background-dark {
    background-color: black; 
+ }
+
+ .text-black {
+   color: black;
  }
 
 .text-header-dark {
@@ -93,7 +104,7 @@ html, body {
   border-radius: 1em;
   margin-left: 3em;
   margin-right: 3em;
-  margin-top: 40%;
+  margin-top: 45%;
   padding-left: 1em;
   padding-right: 1em;
 }
@@ -108,6 +119,11 @@ html, body {
   /*background-color: #333333;
   color: #ffffff;*/
 }
+
+#explore {
+  height: 700px;
+}
+
 #explore .ia {
   border: 2px solid #eb9e50;
   /*border-radius: 20%;*/
@@ -153,7 +169,10 @@ html, body {
 }
 
 #information {
-  background: url('../images/N_2009_4_162 371st Infantry Band 1917.jpg') no-repeat center center fixed; 
+  /*background: url('..
+  /images/N_2009_4_162 371st Infantry Band 1917.jpg') no-repeat center center fixed;*/
+  background-color: white; 
+
   display: table;
   height: 800px;
   position: relative;
@@ -165,7 +184,8 @@ html, body {
 }
 #information .panel {
   opacity: 0.90;
-  
+    padding: 2em;
+  border-left: 5px solid #eb9e50;
 }
 
 
