--- a/bsm/css/style-v2.css
+++ b/bsm/css/style-v2.css
@@ -215,3 +215,8 @@ footer {
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
+
+
+.text-align-left{
+  text-align: left !important;
+}
